<resources>
    <string name="contactsIconLabel">Contacts</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Dialer</string>
    <string name="emergencyDialerIconLabel">Emergency call</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="caller_name">Anil Yadav</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response. Timed out</string>
    <string name="callFailed_server_unreachable">Server not available</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error occurred. Try later</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">Phone locked during rebooting.</string>
    <string name="callFailed_cdma_drop">Call dropped.</string>
    <string name="callFailed_cdma_intercept">Call intercepted.</string>
    <string name="callFailed_cdma_reorder">Reorder.</string>
    <string name="callFailed_cdma_SO_reject">Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">Retry limit.</string>
    <string name="callFailed_cdma_accessFailure">Access failed.</string>
    <string name="callFailed_cdma_preempted">Preempted.</string>
    <string name="callFailed_cdma_notEmergency">An incorrect SIM is being used. Only emergency calls can be dialled.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call lost</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="call_settings">Call</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional call settings only for GSM</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to %s</string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to %s</string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="labelCFNRc">Forward when unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to %s</string>
    <string name="sum_cfnrc_disabled">Disabled</string>
    <string name="sum_voicemail_choose_provider">Select voice mail service</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="preferred_network_mode_title">Network mode</string>
    <string name="preferred_network_mode_summary">Change Network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="data_enabled">Use packet data</string>
    <string name="data_enable_summary">Activate data network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="throttle_data_usage">Data usage</string>
    <string name="throttle_current_usage">Current data usage</string>
    <string name="throttle_time_frame">Data usage period</string>
    <string name="throttle_rate">Data rate policy</string>
    <string name="throttle_help">Learn more</string>
    <string name="toggle_internationalcall_title">International Call Lock</string>
    <string name="internationalcall_on">International call lock is enabled</string>
    <string name="internationalcall_off">International call lock is disabled</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialing Numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto retry</string>
    <string name="auto_retry_mode_summary">Enable Auto retry mode</string>
    <string name="save">Save</string>
    <string name="fake_phone_activity_phoneNumber_text">(650) 555-1234</string>
    <string name="fake_phone_activity_infoText_text">Incoming phone number</string>
    <string name="fake_phone_activity_placeCall_text">Fake Incoming Call</string>
    <string name="voicemail_settings_number_label">Voice mail number</string>
    <string name="onscreenShowDialpadText">Keypad</string>
    <string name="onscreenSpeakerText">Speaker</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenBluetoothText">Headset</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF tones</string>
    <string name="dtmf_tones_summary">Set length of DTMF tones</string>
    <string name="voicemail_settings">Voicemail</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="other_settings">Other call settings</string>
    <string name="sip_edit_title">SIP account details</string>
    <string name="domain_address_title">Server</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="set_primary_title">Set as primary account</string>
    <string name="set_primary_summary">Used for outgoing calls</string>
    <string name="advanced_settings">Optional settings</string>
    <string name="default_preference_summary">(Not set)</string>
    <string name="advanced_settings_show">Tap to show all</string>
    <string name="domain_address">SipDomain</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="set_primary">SetPrimary</string>
    <string name="video_call">Video call</string>
    <string name="webex">WebEx</string>
    <string name="video_call_forwarding_settings">Video call forwarding</string>
    <string name="menu_setRejectCall">Call rejection</string>
    <string name="menu_rejectMessages">Set reject messages</string>
    <string name="menu_callAlert">Call alert</string>
    <string name="menu_answeringEndCall">Call answering/ending</string>
    <string name="summary_answeringEndCall">Manage call answering/ending settings</string>
    <string name="menu_activateProximitySensor">Turn on proximity sensor</string>
    <string name="summary_activateProximitySensor">LCD turns off during calls</string>
    <string name="summary_setRejectCall">Manage Auto reject/accept mode</string>
    <string name="summary_editRejectMessages">Edit reject messages</string>
    <string name="summary_callAlert">Set call alerts</string>
    <string name="category_videoCallSettings">Video call settings</string>
    <string name="menu_videocallImage">Video call image</string>
    <string name="summary_videocallImage">Set default Hide me image</string>
    <string name="menu_ownVideoInReceivedCall">Own video in received call</string>
    <string name="summary_ownVideoInReceivedCall">Show live image to caller when user accepts video call</string>
    <string name="menu_useCallFailOption">Use call fail options</string>
    <string name="summary_useCallFailOption">Use alternative methods to reattempt failed call</string>
    <string name="callsettings_voicecall_barring">Call barring</string>
    <string name="callsettings_voicecall_autoredial">Auto redial</string>
    <string name="callsettings_auto_redial_sub">Enable auto redial if call is unable to connect or cut off</string>
    <string name="sum_vcfu_enabled">Forwarding all video calls to %s</string>
    <string name="end_call">End call</string>
    <string name="menu_record_voice">Record</string>
    <string name="bluetooth_call">Headset settings</string>
    <string name="toggle_videocall_title">Auto divert to voice call</string>
    <string name="videocall_summary">Video calls automatically switch to voice calls when dialed to numbers that do not support video calls</string>
    <string name="toggle_videocall_mode_title">Remote mode control</string>
    <string name="videocall_mode_on">Screen mode auto control that is effective when connected to a video call server is enabled</string>
    <string name="videocall_mode_off">Screen mode auto control that is effective when connected to a video call server is disabled</string>
    <string name="menu_captureImageViewer">Video Call contents box</string>
    <string name="summary_captureImageViewer">Captured images have been stored</string>
    <string name="ipcalllist">IP Call List</string>
    <string name="sum_ipcalllist">Manage IP Call List</string>
    <string name="ipcallsetting">IP Call setting</string>
    <string name="callsettings_allcalls_number_region">Phone number locator</string>
    <string name="callsettings_allcalls_number_region_sub_text">Configure the Phone number locator</string>
    <string name="callsettings_allcalls_activation">Activation</string>
    <string name="callsettings_allcalls_activation_off">Off</string>
    <string name="callsettings_allcalls_activation_on">On</string>
    <string name="callsettings_allcalls_version">Version</string>
    <string name="callsettings_allcalls_detail_version">Update or reset version</string>
    <string name="callsettings_allcalls_help">Help</string>
    <string name="callsettings_allcalls_help_info">Display the detail help information</string>
</resources>