<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/video_call_forwarding_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <com.android.phone.CallForwardEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/labelCFU" android:key="button_vcfu_key" android:summaryOn="@string/sum_vcfu_enabled" android:summaryOff="@string/sum_cfu_disabled" android:dialogTitle="@string/labelCFU" android:dialogMessage="@string/messageCFU" phone:confirmMode="activation" phone:serviceClass="video" phone:reason="unconditional" />
    <com.android.phone.CallForwardEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/labelCFB" android:key="button_vcfb_key" android:dependency="button_vcfu_key" android:summaryOn="@string/sum_cfb_enabled" android:summaryOff="@string/sum_cfb_disabled" android:dialogTitle="@string/labelCFB" android:dialogMessage="@string/messageCFB" phone:confirmMode="activation" phone:serviceClass="video" phone:reason="busy" />
    <com.android.phone.CallForwardEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/labelCFNRy" android:key="button_vcfnry_key" android:dependency="button_vcfu_key" android:summaryOn="@string/sum_cfnry_enabled" android:summaryOff="@string/sum_cfnry_disabled" android:dialogTitle="@string/labelCFNRy" android:dialogMessage="@string/messageCFNRy" phone:confirmMode="activation" phone:serviceClass="video" phone:reason="no_reply" />
    <com.android.phone.CallForwardEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/labelCFNRc" android:key="button_vcfnrc_key" android:dependency="button_vcfu_key" android:summaryOn="@string/sum_cfnrc_enabled" android:summaryOff="@string/sum_cfnrc_disabled" android:dialogTitle="@string/labelCFNRc" android:dialogMessage="@string/messageCFNRc" phone:confirmMode="activation" phone:serviceClass="video" phone:reason="not_reachable" />
</PreferenceScreen>
