<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/inCallButtonsLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/inCallButtonsPortrait" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:textSize="16.0sp" android:textColor="@color/incall_button_text" android:gravity="center_vertical" android:id="@id/hdVideoButton" android:background="@drawable/incall_hd_video_button" android:paddingLeft="4.669983dip" android:paddingRight="4.669983dip" android:visibility="gone" android:layout_width="108.0dip" android:layout_height="36.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="9.0dip" android:text="@string/video_call" android:drawableLeft="@drawable/incall_button_hd_video_icon" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        <ImageView android:id="@id/noiseReduction" android:visibility="gone" android:src="@drawable/call_noise_reduction_icon" style="@style/InCallNoiseReducionImageView" />
        <LinearLayout android:id="@id/holdButtonContainer" android:visibility="gone" style="@style/InCallRoundButtonContainer">
            <ImageButton android:id="@id/holdButton" android:src="@drawable/incall_button_hold_icon" style="@style/InCallRoundTouchHoldButton" />
            <TextView android:id="@id/holdButtonLabel" style="@style/InCallRoundButtonLabel" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingLeft="5.0dip" android:paddingRight="4.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <FrameLayout android:layout_width="1.0dip" android:layout_height="91.0dip" android:layout_marginLeft="6.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="7.0dip" android:layout_marginBottom="16.0dip" android:layout_weight="1.0">
                    <Button android:id="@id/addButton" android:visibility="gone" android:text="@string/onscreenAddCallText" android:drawableTop="@drawable/incall_button_add_icon" style="@style/InCallTouchUpperButton" />
                    <Button android:id="@id/webexButton" android:visibility="gone" android:text="@string/webex" android:drawableTop="@drawable/incall_button_webex_icon" style="@style/InCallTouchUpperButton" />
                    <Button android:id="@id/recordButton" android:visibility="gone" android:text="@string/menu_record_voice" android:drawableTop="@drawable/incall_button_start_record_icon" style="@style/InCallTouchUpperButton" />
                </FrameLayout>
                <Button android:id="@id/dialpadButton" android:text="@string/onscreenShowDialpadText" android:drawableTop="@drawable/incall_button_dialpad_icon" style="@style/InCallTouchUpperButtonNoFrame" />
                <FrameLayout android:layout_width="1.0dip" android:layout_height="91.0dip" android:layout_marginLeft="6.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="7.0dip" android:layout_marginBottom="16.0dip" android:layout_weight="1.0">
                    <Button android:id="@id/endButton" android:background="@drawable/red_button" android:visibility="gone" android:text="@string/end_call" android:drawableTop="@drawable/incall_button_end_icon" style="@style/InCallTouchUpperButton" />
                    <Button android:id="@id/cancelButton" android:background="@drawable/red_button" android:visibility="gone" android:text="@string/end_call" android:drawableTop="@drawable/incall_button_cancel_icon" style="@style/InCallTouchUpperButton" />
                    <Button android:id="@id/inCallSaveButton" android:visibility="gone" android:text="@string/save" android:drawableTop="@drawable/incall_button_save_icon" style="@style/InCallTouchUpperButton" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ToggleButton android:id="@id/speakerButton" android:textOn="@string/onscreenSpeakerText" android:textOff="@string/onscreenSpeakerText" style="@style/InCallTouchToggleButtonNoFrame" />
                <ToggleButton android:id="@id/muteButton" android:textOn="@string/onscreenMuteText" android:textOff="@string/onscreenMuteText" style="@style/InCallTouchToggleButtonNoFrame" />
                <ToggleButton android:id="@id/bluetoothButton" android:textOn="@string/onscreenBluetoothText" android:textOff="@string/onscreenBluetoothText" style="@style/InCallTouchToggleButtonNoFrame" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <com.android.phone.InCallButtonsViewLand android:id="@id/inCallButtonsLandscape" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</FrameLayout>
